--- a/src/components/HomeHero/index.module.css
+++ b/src/components/HomeHero/index.module.css
@@ -1,8 +1,7 @@
 .hero {
-  min-height: 100vh;
   min-height: 100svh;
-  min-height: 100dvh;
   padding-top: 4rem;
+  padding-bottom: 4rem;
   background: #faf7f2;
   display: flex;
   align-items: center;
