--- a/src/components/TestimonialsSection/index.module.css
+++ b/src/components/TestimonialsSection/index.module.css
@@ -67,6 +67,12 @@
   gap: 0.75rem;
 }
 
+.imageWrapper {
+  position: relative;
+  width: 2.625rem;
+  height: 2.625rem;
+}
+
 .avatar {
   width: 42px;
   height: 42px;
